file(GLOB bb_srcs        bb/*.cpp)
file(GLOB bb_headers     bb/*.h)
file(GLOB comm_srcs      comm/*.cpp)
file(GLOB comm_headers   comm/*.h)
file(GLOB misc_srcs      misc/*.cpp)
file(GLOB misc_headers   misc/*.h)
file(GLOB pebbl_srcs     pbb/*.cpp)
file(GLOB pebbl_headers  pbb/*.h)
file(GLOB sched_srcs     sched/*.cpp)
file(GLOB sched_headers  sched/*.h)
file(GLOB utilib_srcs    utilib/*.cpp)
file(GLOB utilib_headers utilib/*.h)

add_library(pebbl ${bb_srcs} ${bb_headers} ${comm_srcs} ${comm_headers} ${misc_srcs} ${misc_headers}
            ${pebbl_srcs} ${pebbl_headers} ${sched_srcs} ${sched_headers} ${utilib_srcs} ${utilib_headers})
if(enable_mpi)
  if(MPI_CXX_COMPILE_FLAGS)
    target_compile_options(pebbl PUBLIC ${MPI_CXX_COMPILE_FLAGS})
  endif()
  set_target_properties(pebbl PROPERTIES LINK_FLAGS ${MPI_CXX_LINK_FLAGS})
  target_link_libraries(pebbl PUBLIC ${MPI_CXX_LIBRARIES})
endif()

install(TARGETS pebbl EXPORT PEBBL DESTINATION ${lib_install_dir})
install(EXPORT PEBBL DESTINATION ${package_install_dir} FILE pebblTargets.cmake)
install(FILES ${bb_headers}     DESTINATION ${pebbl_header_install_dir}/bb)
install(FILES ${comm_headers}   DESTINATION ${pebbl_header_install_dir}/comm)
install(FILES ${misc_headers}   DESTINATION ${pebbl_header_install_dir}/misc)
install(FILES ${pebbl_headers}  DESTINATION ${pebbl_header_install_dir}/pbb)
install(FILES ${sched_headers}  DESTINATION ${pebbl_header_install_dir}/sched)
install(FILES ${utilib_headers} DESTINATION ${pebbl_header_install_dir}/utilib)

if(enable_examples)
  add_subdirectory(example)
endif()
